Test/semantic_tests/error16_dup_struct_name.expected
Error type 16 at Line 6: Redefined structure.