Test/semantic_tests/error16_dup_struct_name.cmm
struct Point
{
    int x;
};

struct Point 
{
    int y;
};

int main()
{
}
